style(global): Prevents the table from overflowing the parent element

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -85,7 +85,16 @@
   }
 
   table {
-    @apply font-roboto-variable my-6 w-full table-auto border-collapse text-left;
+    @apply font-roboto-variable my-6 block w-full border-collapse overflow-x-auto text-left;
+  }
+
+  thead,
+  tbody {
+    @apply table w-full;
+  }
+
+  tr {
+    @apply table-row min-w-full;
   }
 
   thead {
